fixed word wrapping problem on export results popover
Former-commit-id: 755723345787f35b0ff0e2c4f945044f631ecc21

--- a/assets/less/widget.less
+++ b/assets/less/widget.less
@@ -1512,6 +1512,7 @@ th.ui-th-column div {
   a {
     margin-top: 0px;
     margin-bottom: 0px;
+    word-wrap: break-word;
   }
 
   .nav {
